--- a/main.html
+++ b/main.html
@@ -24,19 +24,28 @@
 
 		Additional data : <br>
 		<input type="checkbox" name="adds" value="std"> Standard deviation<br>
+		<input type="checkbox" name="adds" value="avg"> Average<br>
 		<input type="checkbox" name="adds" value="max"> Maximum<br>
 		<input type="checkbox" name="adds" value="min"> Minimum<br>
 		<input type="checkbox" name="adds" value="min"> Bid<br>
 	</form>
 	<input type="button" value="Generate" onclick="drawCharts()" />
 
-	<h3>Google AnnotatedTimeline:</h3>
+	<h3>General</h3>
 	<div id='gviz_div' style='width: 1225px; height: 420px;'></div><br>
 	<div id='gviz_div_q' style='width: 1225px; height: 420px;'></div>
 
-	<h3>Dygraph.GVizChart:</h3>
+	<h3>General</h3>
 	<div id='dg_div' style='width: 1225px; height: 420px;'></div><br>
 	<div id='dg_div_q' style='width: 1225px; height: 420px;'></div>
+
+	<h3>Week</h3>
+	<div id='week' style='width: 1225px; height: 420px;'></div><br>
+	<div id='week_q' style='width: 1225px; height: 420px;'></div><br>
+
+	<h3>Day</h3>
+	<div id='day' style='width: 1225px; height: 420px;'></div><br>
+	<div id='day_q' style='width: 1225px; height: 420px;'></div><br>
 </body>
 
 </html>
