--- a/main.html
+++ b/main.html
@@ -15,6 +15,9 @@
 <body>
 	<form id="form">
 		Item ID : <input id="item_id" type="text" name="Item id"><br>
+		Date :  <br>
+		<input type="radio" name="date" value="apr"> April<br>
+		<input type="radio" name="date" value="nov"> November<br>
 
 		Data type : <br>
 		<input type="checkbox" name="datas" value="buy"> Buy<br>
